Navbar logo alignment fix

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 .logo img {
     width: 260px;
     height: 200px;
+    display: block;
 }
 
 .nav-links {
